crates/tuirealm-textarea/tests/snapshots/component_textarea__textarea_crate_empty.snap
---
source: crates/tuirealm-textarea/tests/component_textarea.rs
expression: rendered
---

 ┌Empty───────────────────────────────┐
 │                                    │
 │                                    │
 │                                    │
 │                                    │
 └────────────────────────────────────┘
