crates/tuirealm-textarea/tests/snapshots/component_textarea__textarea_crate_multiline.snap
---
source: crates/tuirealm-textarea/tests/component_textarea.rs
expression: rendered
---

 ┌Editor──────────────────────────────┐
 │Line 1                              │
 │Line 2                              │
 │Line 3                              │
 │                                    │
 └────────────────────────────────────┘
