crates/tuirealm-textarea/tests/snapshots/component_textarea__textarea_crate_singleline.snap
---
source: crates/tuirealm-textarea/tests/component_textarea.rs
expression: rendered
---

 ┌Editor──────────────────────────────┐
 │Hello, World!                       │
 │                                    │
 │                                    │
 │                                    │
 └────────────────────────────────────┘
